-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-01-15	pwessel
	* minmax.c:		Determine if input data already lie on a regular lattice,
				and use the phase shifts in x,y to determine -R when -I is given.

2012-01-13	pwessel
	* gmt_support.c:	The quoted line labeling would not free an allocated label
				when the label had no text string.
	* pslib.c:		Added support so that the bit-flags passed into psl_vector
				and psl_mangle controls if vector heads are filled and
				outlined.
	* pslib.txt:		Updated documentation for the changes to vectors.
	* gmt_plot.c:		Let geo_vector also use the bit-flags to change vector head
				fill and outline.
	* minmax.c:		Added the -r option so that users who have pixel-registered
				xyz data can get correct -R via the -I option.
	* psxy[z].c:		Make sure we process the vector modifiers when read via input.

2012-01-10	jluis
	* gmt_customio.c:	GMT_gdal_read_grd was ignoring subregion requests like for
				instances "grdcut -R..." Such request would cause a crash.
	* gmt_gdalread.h:	Add members to inform GMT_gdalread on the coordinates
				registration type used when subregion requests.
	* gmt_grdio.c:		Recognize web located files hose name starts with /vsicurl/...
	* gmt_io.c:				""

2012-01-10	pwessel
	* gmt_map.c:		-R0/360 and -JMlon/lat would not set global_map properly,
				giving NaNs as scale.

2012-01-09	pwessel
	* gmtmath.c:		The COL operator inadvertently set a pointer to NULL, then
				tried to use it.  Also, with operands whatsoever we crashed
				as the Template struct was deallocated twice.

2012-01-08	pwessel
	* grdcut.c:		The -Z would give incorrect -R for pixel grids.  Now also
				print warning if output grid equals input grid (no change).

2012-01-08      remko
	* xyz2grd.txt:		Added missing 'H' and 'I' to -Z options.